Creando un nuevo párrafo en la nueva rama Dev2

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         
 
 
-
+        
 
 
 
         <p>Primer párrafo creado en la rama "Desarrollador1"</p>
+
+
+
+        <p>Este nuevo párrafo lo creamos en la rama nueva Dev2</p>
 
 
     </body>
