Modificación para probar conflicto en el merge

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <p>Primer párrafo creado en la rama "Desarrollador1"</p>
 
 
+
+        <p>Probando conflicto entre ramas</p>
+
     </body>
 
 </html>
